plans/0.2.4/font/00-canonical-font-resolution-plan.md
# v0.2.4 Font Resolution, Fallback, and Compliance Plan

> **Status:** planned — validated codebase scan completed 2026-08-18
> **Parent:** [`plans/0.2.4/31-canonical-0.2.4-roadmap.md`](../31-canonical-0.2.4-roadmap.md)
> **Owner:** `internal/pdf`, `internal/layout`, `internal/convert`, CLI and
> public `Document` font options
> **Constraint:** pure Go; no CGO, browser embedding, Pango, Fontconfig, or
> second PDF writer

## Purpose

Make the font behavior honest and useful for two different real-world cases:

- deterministic conversion with only the bundled fonts available;
- exact author-selected fonts when a licensed, supported face is supplied by
  `--font-path`, `--use-system-fonts`, or `@font-face`.

The current PDF writer already performs the hard compliance work. This plan
connects font selection to that writer without weakening the existing gates or
turning WeasyPrint/Chrome into a default runtime dependency.

## Current-state findings

| Area | Current implementation | Consequence for this plan |
|------|------------------------|---------------------------|
| Bundled faces | `internal/pdf/assets` embeds Liberation Sans/Serif/Mono regular, bold, italic, bold-italic plus DejaVu fallback | Safe deterministic baseline; preserve it |
| Named CSS aliases | `FaceSet.ResolveFamily` directly maps names such as Georgia, Times, Arial, and Courier New to bundled families | Can bypass later author-stack entries and cannot produce exact named fonts |
| Optional discovery | `--font-path` and `--use-system-fonts` build a registry from directories; registry matching is by internal family name | The flag is opt-in file discovery, not host Fontconfig alias resolution |
| Layout selection | `lookupFaceFor` checks registry, then bundled faces; per-rune fallback repeats part of the policy | A central resolver seam is needed to avoid divergent family/rune behavior |
| `@font-face` | TTF/OTF/WOFF1 are loaded under the existing ACL; WOFF2/EOT/data are skipped; family is registered as an alias | `font-weight` and `font-style` descriptors are currently ignored |
| Parsing | `ParseTTF` accepts TrueType outlines and rejects CFF/`OTTO`; scanning silently skips parse failures | Supported-format and operator diagnostics need an explicit contract |
| PDF embedding | `ensureFont` subsets and emits simple TrueType or Type0/CIDFontType2 with `FontFile2` and `ToUnicode` | Reuse this pipeline; do not add a second subsetter |
| Compliance | PDF 1.7 + PDF/A-3a/PDF/UA-1 and PDF 2.0 + PDF/A-4/PDF/UA-2 are implemented; default output remains unclaimed PDF 1.4 | New faces must pass the same embed-or-fail and profile gates |
| Public API | `Document.FontPaths` and `Document.UseSystemFonts` already map to `settings.PdfGlobal` | No new public font option is required for the first implementation |
| External engines | Chrome resolves OS-installed Georgia; WeasyPrint follows Linux Fontconfig and selected Gelasio Italic on this host | Differential tests must control the font bytes, not only the CSS family name |

## Target resolution contract

For each cascaded `font-family` list and requested weight/style:

1. Try an exact registered/document face for each family token in CSS order.
2. Select the requested weight/style from that family, with a documented
   deterministic nearest-face rule when the exact face is absent.
3. If no named face is available, continue through the remaining author
   family tokens rather than silently importing a host alias.
4. Resolve `serif`, `sans-serif`, and `monospace` to the bundled canonical
   families.
5. Use bundled DejaVu or an explicitly registered glyph-covering face only as
   a last-resort per-rune fallback.
6. Record enough face identity for layout caches and PDF subset caches to stay
   distinct when two files share a display name.

The exact default behavior for legacy aliases must be locked in Phase 1. The
recommended policy is that `Georgia` is exact only when a family named Georgia
is supplied; otherwise `Georgia, "Times New Roman", serif` ends at the
deterministic bundled serif fallback. The renderer must not promise that
Liberation Serif is the actual Georgia typeface.

## Automatic fallback and compliance rule

Fallback is part of the normal font contract; a missing optional font must not
become a user-visible conversion error when a valid fallback exists.

The fallback sequence is:

```text
exact supplied face
  → next author CSS family
  → bundled Liberation family for the generic family
  → bundled DejaVu / registered glyph-covering face for a missing rune
  → error only when no usable face remains
```

Load-time failures such as an invalid path, unsupported CFF/`OTTO` font,
unsupported WOFF2 source, malformed font, or missing requested style must be
treated as an unavailable candidate and continue through that sequence. The
operator should receive a warning or diagnostic, but conversion should
continue when the CSS stack or bundled fallback can satisfy the text.

Embedding failure needs an additional safety rule. A font must not be swapped
after layout has already used its metrics, because a fallback can change line
wrapping and pagination. The implementation must therefore preflight the
selected face for the actual used glyph set before committing paint/output;
when that preflight fails, it must select the next valid fallback and re-layout
the affected object before writing the final PDF. Only when every valid
fallback is exhausted may conversion return an error. A claiming PDF must
never be emitted with an unembedded or non-compliant font.

## Design seam

Create one internal font-resolution module around the existing `FaceSet` and
optional `Registry`. Its interface should be small enough for layout to ask
for a family/style face and a glyph fallback without knowing whether the face
came from bundled assets, an explicit directory, or document `@font-face`.

The seam must own:

- family-stack order;
- exact registered-family lookup;
- generic-family mapping;
- weight/style selection;
- per-rune fallback;
- stable face identity and cache keys;
- optional operator diagnostics about skipped or selected faces.

The public `Document` and CLI interfaces remain unchanged unless a concrete
gap is proven by a phase gate.

## Supported-font policy

The implementation must remain honest about the current writer:

- supported: TrueType fonts and OpenType containers with TrueType outlines;
- supported after conversion: WOFF1;
- rejected or skipped: CFF/`OTTO`, WOFF2, EOT, and `data:` font sources;
- variable-font behavior must be explicitly tested and either supported with
  a stable instance policy or rejected with a clear diagnostic;
- every selected face must be subsettable and embedded as `FontFile2`;
- every emitted text font must retain `ToUnicode` mappings;
- a claiming PDF must fail before writing if a selected face cannot satisfy
  the profile's embedding requirements;
- no proprietary Georgia font is bundled without an explicit redistribution
  license and asset manifest.

## Phase map

| Phase | File | Outcome |
|------:|------|---------|
| 1 | [phase-01-resolution-contract.md](phase-01-resolution-contract.md) | Browser-like, deterministic family-stack contract and acceptance matrix |
| 2 | [phase-02-resolver-seam.md](phase-02-resolver-seam.md) | One internal resolver for family and glyph selection |
| 3 | [phase-03-discovery-and-font-face.md](phase-03-discovery-and-font-face.md) | Correct `--font-path`, system opt-in, and `@font-face` style handling |
| 4 | [phase-04-font-format-and-asset-policy.md](phase-04-font-format-and-asset-policy.md) | Supported-format matrix, fixtures, licensing, and failure diagnostics |
| 5 | [phase-05-pdf-embedding-and-compliance.md](phase-05-pdf-embedding-and-compliance.md) | Loaded faces pass simple/Type0 embedding and all compliance profiles |
| 6 | [phase-06-corpus-and-engine-comparison.md](phase-06-corpus-and-engine-comparison.md) | Fixture-55 and corpus evidence with controlled Chrome/Weasy comparisons |
| 7 | [phase-07-docs-and-operator-contract.md](phase-07-docs-and-operator-contract.md) | Public docs, CLI help, diagnostics, and compatibility claims agree |
| 8 | [phase-08-validation-and-closure.md](phase-08-validation-and-closure.md) | Performance, full gates, artifacts, and plan closure |

## Dependencies

| Depends on | Provides to |
|------------|-------------|
| Existing `FaceSet`, `Registry`, CSS parser, layout, and PDF writer | All phases |
| Phase 1 contract | Resolver and input implementation |
| Phase 2 resolver seam | `@font-face`, layout, and corpus work |
| Phase 3/4 accepted faces | Embedding and compliance proof |
| Phase 5 compliant outputs | Corpus and external differential evidence |
| Phase 6 accepted visual behavior | Docs and closure |

## Non-goals

- Rebuilding the PDF writer or adding a second font subsetter.
- Making Chrome, WeasyPrint, Pango, or Fontconfig runtime dependencies.
- Making host system font discovery the default.
- Claiming pixel parity with a browser whose installed fonts differ.
- Bundling Microsoft Georgia without redistribution rights.
- Reopening the completed 0.2.4 Document API phases for unrelated changes.
- Marking existing fixture goldens as updated before visual and compliance
  evidence is reviewed.

## Definition of done

- The same HTML has a documented result with no font flags, with an explicit
  font directory, and with `@font-face`.
- An actual supplied family wins over the bundled fallback when its internal
  family name matches the CSS name.
- An invalid or unembeddable optional face automatically falls through to a
  valid CSS/bundled fallback before layout is committed.
- Fallback re-layout is proven for a wrapping-sensitive document; no
  post-layout font swap silently changes painted metrics.
- Missing named families follow the author stack and then deterministic
  generic fallback; host aliases do not change default output.
- Regular, bold, italic, bold-italic, Latin-1, and Type0/Unicode cases are
  covered by tests.
- PDF 1.4, PDF 1.7, PDF/A-3a + PDF/UA-1, PDF 2.0, and PDF/A-4 + PDF/UA-2
  outputs retain valid embedding and Unicode maps.
- Fixture-55 and the selected corpus are visually reviewed with screenshots,
  text extraction, page counts, and embedded-font inspection.
- All phase files contain command outcomes before any row is marked complete.
